Update deps; add fps counter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.8", features = ["dynamic"] }
-rand = "0.8"
-ndarray = "0.15"
+bevy = { version = "0.10.0", features = ["dynamic_linking"] }
+rand = "0.8.5"
+ndarray = "0.15.6"
 line_drawing = "1.0.0"
 
 [profile.dev.package."*"]
